--- a/practica.tex
+++ b/practica.tex
@@ -303,7 +303,6 @@ When using the division method, we usually avoid certaing values of $m$. For exa
 \textbf{The source code for this section can be found in `\textit{ModularHash.cc}'.}
 \bigskip
 
-
 \subsection{Multiplicative Hashing}
 The multiplicative method for creating hash functions operates in two steps.
 Firstly, we multiply the key $k$ by a constant $A$ in the range $0<A<1$ and extract the fractional part of $kA$. Then, we multiply this value by $m$ and take the floor the result. To sum up:  
@@ -324,6 +323,7 @@ An advantage of the multiplication method is that the value of m is not critical
 	\caption{Multiplicative Hashing}
 	\label{fig:MultiplicativeHashing}
 \end{figure}
+
 \bigskip
 \begin{center}
 \begin{large}
@@ -410,7 +410,6 @@ Murmur3(key, len, seed)
 \textbf{The source code for this section can be found in `\textit{MurmurHash3.cc}'.}
 \bigskip
 
-
 \section{Data} %canviar el nom de la secció
 
 \subsection{Real-world data}
@@ -429,7 +428,7 @@ As it can be seen, we traverse all the document once to generate a vector of str
 \section{Experiments}
 We designed some experiments in order to test our algorithms, and discover how some of their variables affect the outcome.
 
-\subsection{K-shingles Size}
+\subsection{\textit{k}-shingles Size}
 \textbf{The source code for this experiment can be found in `\textit{jocProvesJaccard.cc}'.}
 \bigskip
 
@@ -449,11 +448,12 @@ In our case, with a set of 20 documents we have:
 
 So we computed the Jaccard Similarity for these 190 pairs of documents, for different sizes of $k$, ranging from 2 to 20. The results can be seen in \autoref{fig:KShinglesSimilarity}.
 
+\bigbreak
 As we expected, the similarity decreases as the size of the k-shingles increases.
-In fact, we observe that for values of $k$ larger 12, the similarity obtained is mostly 0.
 
 For smaller values of $k$ that allow k-shingles to remain within a word, we see that a lot of similarities are found, as the documents share the same words.
-And, on the other hand, for values of $k$ that span more than a word, the similarity between documents is very small (because the documents don't share the word order, so the probability of identical k-shingles decreases).
+On the other hand, for values of $k$ that span more than one word, the similarity between documents is very small (because the documents don't share the word order, so the probability of identical k-shingles decreases).
+In fact, we observe that for values of $k$ larger 12, the similarity obtained is mostly 0.
 
 As mentioned in \autoref{kShingles}, a good and reasonable value for $k$ is 9.
 For $k = 9$, the similarity found between all our random documents is less than 0.1, which corresponds with the fact that the documents don't really share sentences or many contiguous words.
@@ -461,7 +461,7 @@ For $k = 9$, the similarity found between all our random documents is less than 
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.5]{graphs/JaccardSimilarityValueKshingles.pdf} 
-	\caption{Relation between the K-shingles size and the similarity (for all of the possible pairwise combinations of 100 random permutations of a 50 words document)}
+	\caption{Relation between the K-shingles size and the similarity (for all of the possible pairwise combinations of 20 random permutations of a 50 words document)}
 	\label{fig:KShinglesSimilarity}
 \end{figure}
 
