--- a/practica.tex
+++ b/practica.tex
@@ -483,9 +483,6 @@ For $k = 9$, the similarity found between all our random documents is less than 
 %  \label{fig:KShinglesTime}
 %\end{figure}
 
-\subsection{Precision of Jaccard Similarity Approximations}
-\textbf{The source code for this experiment can be found in `\textit{jocProvesJaccSim.cc}'.}
-\bigskip
 
 \begin{figure}[H]
 	\centering
@@ -542,6 +539,8 @@ T.\ H.\ Cormen, C.\ E.\ Leierson, R.\ L.\ Rivest and C.\ Stein, \textit{Introduc
 D.\ Knuth,
 \textit {Sorting and Searching}, volume 3 of \textit{The Art of Computer Programming} (Addison-Wesley, 1997. Third Edition)
 
+\bibitem{Latex}
+L.\ Lamport, \textit{LATEX: a document preparation system: user's guide and reference manual} (Addison-Wesley Pub. Co., cop. 1994)
 
 \bibitem{Murmur Hash explained}
 S.\ Yar [Developer's Catalog By Sahib Yar]
