--- a/practica.tex
+++ b/practica.tex
@@ -149,19 +149,6 @@ Where:
 \item c is a prime number slightly larger than the total number of shingle sets. 
 \end{itemize}
 
-\subsection{Get the similarity}
-\begin{lstlisting}
-sim(signatureMatrix,a,b)
-    float simil = 0;
-    for i = 0 to signatureMatrix.size() do:
-        if(signatureMatrix[i][a] == signatureMatrix[i][b]) then ++simil;
- 
-    return simil / signatureMatrix.size();
-
-
-\end{lstlisting}
-
-
 \section{Locality-Sensitive Hashing for Documents}
  This technique allows us to avoid computing the similarity of every pair of sets or their minhash signatures. If we are given signatures for the sets, we may divide them into bands, and only measure the similarity of a pair of sets if they are identical in at least one band. By choosing the size of bands appropriately, we can eliminate from consideration most of the pairs that do not meet our threshold of similarity.
  \medskip 
@@ -171,11 +158,10 @@ sim(signatureMatrix,a,b)
 int hash_vec(V) {
 	seed = V.size();
 	for each i in V do:
-		seed = seed XOR (i + 0x9e3779b9 + (seed << 6) + (seed >> 2));
+		seed = seed XOR (i + 0x9e3779b9 + (seed << 6) + (seed >> 2));	
 		//operands << and >> are shifting left and right respectively x bits
 	return seed;
 }
-
 \end{lstlisting}
  \medskip 
   
@@ -195,6 +181,19 @@ vector<set<string>> docShing){
 }
 \end{lstlisting}
 \medskip
+
+\subsection{Get the similarity}
+\begin{lstlisting}
+float sim(Matrix<unsigned int> signatureMatrix, int a, int b)
+    float simil = 0;
+    for int i = 0 to signatureMatrix.size() do:
+        if(signatureMatrix[i][a] == signatureMatrix[i][b])
+						then ++simil;
+    
+    return simil / signatureMatrix.size();
+
+
+\end{lstlisting}
 
 \begin{large}Funció que ens ordena un parell posant el més gran com a segon.
 \end{large}
@@ -247,6 +246,26 @@ main()
  
  \end{lstlisting}
  
+\section{Distance Measures}
+
+In this section we shall take a break to study the notions of distance measure.
+Suppose we have two points (i.e. x and y), a distance measure on them is a function d(x,y) that produces a real number and satisfies the following properties:
+\begin{itemize}
+\item d(x,y) $\geq$ 0 
+
+\item d(x,y) = 0 $\iff$ x = y 
+
+\item d(x,y) $\leq$ d(x,z) + d(z,y) (this is called the triangle inequality)
+\end{itemize}
+
+
+\subsection{Jaccard Distance}
+
+We define the Jaccard distance of two sets x and y as d(x,y) = 1 - SIM(x,y). Note that the Jaccard similarity is the probability that a random hash function maps x and y to the \textit{same} value, that means d(x,y) is the probablility that a random hash function sends them to \textit{different} values.
+
+\subsection{Edit Distance}
+
+
 \section{Hashing}
 
 Hashing is a technique for dimensionality reduction. It uses a hash function that is any function that can be used to map data ( called a key) of arbitrary size to data of a fixed size (called a hash value or hash). That hash is a sum up of everything that is in the data. You can never make it backwards from the hash to the data.
@@ -281,24 +300,9 @@ Where:
 
 When using the division method, we usually avoid certaing values of $m$. For example, $m = 2^p$ for some integer $p$, then $h(k)$ would be just the $p$-lowest-order bits of $k$. A prime value is often a good choice of $m$.
 
-\begin{center}
-\begin{large}
-Pseudocode Modular Hashing
-\end{large}
-\end{center}
-
-\begin{lstlisting}[mathescape=true]
-ModularHashing(k)
-	$x \leftarrow the \ maximum \ value \ possible \ of \ k $
-	$a \leftarrow random \ number \ mod\  (x) $
-	$b \leftarrow random \ number \ mod\  (x) $
-	$m \leftarrow a \ prime \ number \geq x $
-	$value \leftarrow a*k + b \ mod\  (m) $
-
-\end{lstlisting}
-
 \textbf{The source code for this section can be found in `\textit{ModularHash.cc}'.}
 \bigskip
+
 
 \subsection{Multiplicative Hashing}
 The multiplicative method for creating hash functions operates in two steps.
@@ -325,7 +329,6 @@ Supposing that the word size of the machine is $w$ bits, that $k$ fits in a sing
 	\caption{Multiplicative Hashing}
 	\label{fig:MultiplicativeHashing}
 \end{figure}
-
 \bigskip
 
 Although this method works with any value of the constant A, it works better with some values than with others. The optimal choice depends on the characteristics of the data being hashed. Donald Knuth suggest that...
@@ -408,6 +411,7 @@ Murmur3(key, len, seed)
 \textbf{The source code for this section can be found in `\textit{MurmurHash3.cc}'.}
 \bigskip
 
+
 \section{Data} %canviar el nom de la secció
 
 \subsection{Real-world data}
@@ -426,7 +430,7 @@ The algorithm we implemented to generate our data consists in traversing all the
 \section{Experiments}
 We designed some experiments in order to test our algorithms, and discover how some of their variables affect the outcome.
 
-\subsection{\textit{k}-shingles Size}
+\subsection{K-shingles Size}
 \textbf{The source code for this experiment can be found in `\textit{jocProvesJaccard.cc}'.}
 \bigskip
 
@@ -446,12 +450,11 @@ In our case, with a set of 20 documents we have:
 
 So we computed the Jaccard Similarity for these 190 pairs of documents, for different sizes of $k$, ranging from 2 to 20. The results can be seen in \autoref{fig:KShinglesSimilarity}.
 
-\bigbreak
 As we expected, the similarity decreases as the size of the k-shingles increases.
+In fact, we observe that for values of $k$ larger 12, the similarity obtained is mostly 0.
 
 For smaller values of $k$ that allow k-shingles to remain within a word, we see that a lot of similarities are found, as the documents share the same words.
-On the other hand, for values of $k$ that span more than one word, the similarity between documents is very small (because the documents don't share the word order, so the probability of identical k-shingles decreases).
-In fact, we observe that for values of $k$ larger 12, the similarity obtained is mostly 0.
+And, on the other hand, for values of $k$ that span more than a word, the similarity between documents is very small (because the documents don't share the word order, so the probability of identical k-shingles decreases).
 
 As mentioned in \autoref{kShingles}, a good and reasonable value for $k$ is 9.
 For $k = 9$, the similarity found between all our random documents is less than 0.1, which corresponds with the fact that the documents don't really share sentences or many contiguous words.
@@ -459,13 +462,25 @@ For $k = 9$, the similarity found between all our random documents is less than 
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.5]{graphs/JaccardSimilarityValueKshingles.pdf} 
-	\caption{Relation between the K-shingles size and the similarity (for all of the possible pairwise combinations of 20 random permutations of a 50 words document)}
+	\caption{Relation between the K-shingles size and the similarity (for all of the possible pairwise combinations of 100 random permutations of a 50 words document)}
 	\label{fig:KShinglesSimilarity}
 \end{figure}
 
 \subsection{Performance of Different Hashing Algorithms}
 \textbf{The source code for this experiment can be found in `\textit{jocProvesHashTimes.cc}'.}
 \bigskip
+
+\subsection{Precision of Jaccard Similarity Approximations}
+\textbf{The source code for this experiment can be found in `\textit{jocProvesJaccSim.cc}'.}
+\bigskip
+
+We have tested different k sizes for our k-shingles and three different hash functions for fillinf the signature matrix explained (FICAR SECTION) to check their different performance. 
+
+Our hash functions are MurmurHash3, Multiplicative Hash and Modular Hash and are explained in the section 8.
+
+As we expected, the time increases as the size of the k-shingle increases in a general basis. This behaviour can be explained in the number of different shingles we would have to work with.
+
+TO BE CONTINUED
 
 \begin{figure}[H]
 	\centering
