--- a/practica.tex
+++ b/practica.tex
@@ -504,6 +504,15 @@ For $k = 9$, the similarity found between all our random documents is less than 
 \textbf{The source code for this experiment can be found in `\textit{jocProvesJaccSim.cc}'.}
 \bigskip
 
+We have tested different k sizes for our k-shingles and three different hash functions for fillinf the signature matrix explained in \autoref{Hashing} to check their different performance.
+
+Our hash functions are MurmurHash3, Multiplicative Hash and Modular Hash and are explained in the section 8.
+
+As we expected, the time increases as the size of the k-shingle increases in a general basis. This behaviour can be explained in the number of different shingles we would have to work with. It is trivial to observe that the number of k-shingles is going to have a growing tendency based on their size. 
+
+Also we have been able to observe that the performance of MurmurHash and MultiplicativeHash are almost the same. 
+ModularHash is the one that has performed the best. 
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.55]{graphs/JaccardSimilarityVsApproximation.pdf}
