Revert "very small tweak"
This reverts commit 60e83cc6351d57ec32d22ed348f89248d1f79d0f.

--- a/practica.tex
+++ b/practica.tex
@@ -438,7 +438,7 @@ For us, $k$ defines the number of characters for each k-shingle.
 
 Using the algorithm explained in \autoref{generatingData}, we generated 20 permutations of a 50 words document, thus obtaining 20 new documents.
 
-Then we calculated the Jaccard Similarity (\autoref{similarity}) for all the possible pairs of documents from this set.
+Then we calculated the Jaccard Similarity (section \ref{similarity}) for all the possible pairs of documents from this set.
 
 The number of possible pair combinations for a set of $n$ elements (where order is not important) is given by $\binom{n}{2}$.
 
